crates/swc_ecma_parser/tests/flow/invalid_syntax/migrated_0010.js
// 11.8.5.1 no unicode as flags
var x = /[P QR]/\u0067
